<resources>
    <string name="app_name">Vivify</string>
    <string name="title_activity_alarms">AlarmsActivity</string>
    <string name="repeat">Repeat</string>
    <string name="time">Time</string>
    <string name="standard_time">Standard Time</string>
    <string name="isSet">On/Off</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="search">Search</string>
    <string name="next_song">Next Song</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="delete_alarm">Delete</string>
    <string name="save_alarm">Save</string>
    <string name="name">Alarm name</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="pending_alarm">No alarm set</string>
    <string name="login">Login with Spotify</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_alarm">Alarm</string>
    <string name="title_version">Version</string>
    <string name="app_version">Vivify v0.8.5</string>
    <string name="logout">Log out</string>
    <string name="pref_header_other">Other</string>
    <string name="pref_header_alarms">Alarms</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_feedback">Any issues? Let us know</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="summary_ringtone">Choose a ringtone</string>
    <string name="summary_snooze">Select the snooze interval</string>
    <string name="summary_fade">Gradually increase volume</string>
    <string name="summary_notification">Creates a permanent notification displaying the time of the next alarm</string>
    <string name="app_email">rigo.moran0@gmail.com</string>
    <string name="title_ringtone">Default Ringtone</string>
    <string name="key_snooze">snooze_key</string>
    <string name="title_snooze">Snooze</string>
    <string name="title_fade_in">Fade in Duration</string>
    <string name="key_fade_in">fadein_key</string>
    <string name="key_notification">notification_key</string>
    <string name="title_alarm_notif">Allow Upcoming Alarm Notification</string>
    <string name="summary_logout">You are logged into Spotify</string>
    <string name="key_logout">logout</string>
</resources>
