<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_alarms"/>

    <RingtonePreference
        android:key="default_ringtone_key"
        android:title="@string/title_ringtone"
        android:ringtoneType="alarm"
        android:summary="@string/summary_ringtone"
        android:defaultValue="content://settings/system/awaken"/>

    <ListPreference
        android:key="@string/key_snooze"
        android:title="@string/title_snooze"
        android:summary="@string/summary_snooze"
        android:entries="@array/snoozeIntervals"
        android:entryValues="@array/snoozeValues"
        android:defaultValue="5"/>

    <ListPreference
        android:key="@string/key_fade_in"
        android:title="@string/title_fade_in"
        android:summary="@string/summary_fade"
        android:entries="@array/fadeinIntervals"
        android:entryValues="@array/fadeinValues"
        android:defaultValue="30"/>

    <PreferenceCategory android:title="@string/pref_header_notifications"/>

    <CheckBoxPreference
        android:key="@string/key_notification"
        android:title="@string/title_alarm_notif"
        android:summary="@string/summary_notification"
        android:defaultValue="true"/>

    <!--<CheckBoxPreference-->
        <!--android:key="wifi_only_key"-->
        <!--android:title="Wifi Only"-->
        <!--android:defaultValue="false"/>-->


    <!--<com.rva.mrb.vivify.View.Settings.SeekBarPreference-->
        <!--android:key="max_volume_key"-->
        <!--android:summary="Max Alarm Volume"-->
        <!--android:title=""-->
        <!--android:icon="@drawable/alarm_clock"-->
        <!--android:defaultValue="100"/>-->

    <PreferenceCategory android:title="@string/pref_header_about"/>

    <Preference
        android:title="@string/title_version"
        android:summary="@string/app_version"/>

    <Preference
        android:key="@string/key_send_feedback"
        android:title="@string/title_send_feedback"
        android:summary="@string/summary_feedback"/>

    <PreferenceCategory android:title="@string/pref_header_other"/>

    <Preference
        android:title="@string/logout"
        android:enabled="true"
        android:key="@string/key_logout"
        android:summary="@string/summary_logout"
        android:icon="@drawable/ic_spotify_pref"/>

</PreferenceScreen>